fix - fixed footer covering information

--- a/Softuni-Fest/Softuni-Fest/wwwroot/css/site.css
+++ b/Softuni-Fest/Softuni-Fest/wwwroot/css/site.css
@@ -13,18 +13,26 @@ html {
   min-height: 100%;
 }
 
-body {
-  margin-bottom: 60px;
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px;
-}
 
 .no-decor {
     text-decoration: none;
+}
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+#content-wrap {
+    padding-bottom: 300px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 300px;
+    background-color: #171a26;
+    color: rgb(213, 216, 222);
+    padding-left: 20%;
 }
